# QTKSVM

./: LICENSE  Readme.md
qdata-consumer/: CMakeLists.txt  Readme.md
qdata-consumer/POVM_definitions_mathematica/: SpinHalf.nb  SpinOne.nb
qdata-consumer/example/feature_extraction/: SPTfeatures.ini  TrivialFeatures.ini  clean.sh  plot_features.py  run.sh
qdata-consumer/example/phase_diagram/: clean.sh  phasediagram.ini  plot_phasediagram.py  run.sh
qdata-consumer/example/samples/: Run_0.txt  Run_1.txt  Run_10.txt  Run_11.txt  Run_12.txt  Run_13.txt  Run_14.txt  Run_15.txt  Run_16.txt  Run_17.txt  Run_18.txt  Run_19.txt  Run_2.txt  Run_20.txt  Run_3.txt  Run_4.txt  Run_5.txt  Run_6.txt  Run_7.txt  Run_8.txt  Run_9.txt
qdata-consumer/include/client/: config_policy.hpp  phase_point.hpp  sim.hpp
qdata-consumer/include/frustmag/cluster_policy/: fish.hpp  lattice.hpp  multicell.hpp  plaquette.hpp  single.hpp  star.hpp  twocell_overlap.hpp
qdata-consumer/include/frustmag/element_policy/: common.hpp
qdata-consumer/include/frustmag/lattice/: bravais.hpp  honeycomb.hpp  hyperhoneycomb.hpp  kagome.hpp  ortho.hpp  pyrochlore.hpp  squarelink.hpp  stripyhoneycomb.hpp
qdata-consumer/include/frustmag/site/: spin_O3.hpp  spin_Z2.hpp  v6.hpp  v9.hpp
qdata-consumer/test/: CMakeLists.txt  lattice.cpp  test_multicell.cpp  test_unitcell_accessor.cpp
qdata-consumer/tk-svm/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
qdata-consumer/tk-svm/colormap/: CMakeLists.txt
qdata-consumer/tk-svm/frustmag/: CMakeLists.txt
qdata-consumer/tk-svm/gauge/: CMakeLists.txt
qdata-consumer/tk-svm/include/tksvm/config/: clustered_policy.hpp  monomial_policy.hpp  policy.hpp
qdata-consumer/tk-svm/include/tksvm/phase_space/: label.hpp
qdata-consumer/tk-svm/include/tksvm/phase_space/classifier/: fixed_from_sweep.hpp
qdata-consumer/tk-svm/include/tksvm/sim_adapters/: embarrassing_adapter.hpp  training_adapter.hpp
qdata-consumer/tk-svm/include/tksvm/utilities/: filesystem.hpp  indices.hpp  matrix_output.hpp
qdata-consumer/tk-svm/ising/: CMakeLists.txt
qdata-consumer/tk-svm/src/: coeffs.cpp  learn.cpp
qdata-consumer/tk-svm/svm/: CMakeLists.txt
qdata-consumer/tk-svm/svm/include/svm/: parameters.hpp
(+139 files in other folders)
